--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,6 @@ body{
 
 /*Globales*/
 .contenedor{
-    width: min(90%, 120rem);
     margin: 0 auto;
 }
 a{
@@ -66,11 +65,10 @@ li{
 
 .header{
     background-color: var(--secundario);
-    margin-bottom: 2.5rem;
-}
-
-.fotoPerfil{
-    border-radius: 50%;
+    background-size: cover;
+    width: 100%;
+    margin-bottom: 2rem;
+    padding: .5rem;
 }
 
 .fotoPerfil img{
@@ -85,10 +83,6 @@ li{
     text-transform: uppercase;
     margin: 0 auto;
     margin-bottom: 2.5rem;
-    max-width: 90%;
-    width: 80%;
-    display: flex;
-    justify-content: space-between;
 }
 
 .presentacion{
@@ -97,7 +91,10 @@ li{
     margin: 0 auto;
 }
 
-
+.contacto{
+    display: flex;
+    justify-content: center;
+}
 
 
 
