--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ h1, h2, h3, h4{
     line-height: 1.2;
 }
 h1{
-    font-size: 4.8rem;
+    font-size: 5rem;
 }
 h2{
     font-size: 4rem;
@@ -65,8 +65,8 @@ li{
 
 .header{
     background-color: var(--secundario);
-    background-size: cover;
     width: 100%;
+    text-transform: uppercase;
     margin-bottom: 2rem;
     padding: .5rem;
 }
@@ -77,15 +77,24 @@ li{
     border-radius: 50%;
 }
 
-
-
 .navegacion{
+    background-color: var(--alternativo);
     text-transform: uppercase;
-    margin: 0 auto;
-    margin-bottom: 2.5rem;
 }
 
-.presentacion{
+.navegacion li{
+    padding: 1rem;
+}
+
+@media (min-width: 768px) {
+    .navegacion ul{
+        display: flex;
+        justify-content: center;
+    }
+    
+}
+
+.contenido{
     text-align: center;
     max-width: 60%;
     margin: 0 auto;
