--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 
 }
 
+
 html{
     box-sizing: border-box;
     font-size: 62.5%;
@@ -63,6 +64,7 @@ li{
     text-align: center;
 }
 
+/*index*/
 .header{
     background-color: var(--secundario);
     width: 100%;
@@ -105,6 +107,12 @@ li{
     justify-content: center;
 }
 
+/*Formacion*/
 
+.formacion fieldset legend{
+    text-transform: uppercase;
+}
 
-
+.certificados{
+    text-transform: uppercase;
+}
