--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 :root{
     --fuente:'Open Sans', sans-serif;
     --blanco: #ffffff;
-    --principal: #001740;
-    --secundario: #02225a;
-    --alternativo: #00296f;
+    --principal: #333333;
+    --secundario: #e08709;
+    --alternativo: #9e9e9e;
 
 }
 
@@ -20,7 +20,7 @@ body{
     font-size: 1.6rem;
     line-height: 2;
     color: var(--blanco);
-    background-color: #001740;
+    background-color: var(--principal);
 }
 
 /*Globales*/
@@ -29,7 +29,6 @@ body{
 }
 a{
     text-decoration: none;
-    color: var(--blanco);
 }
 h1, h2, h3, h4{
     line-height: 1.2;
@@ -66,7 +65,7 @@ li{
 
 /*index*/
 .header{
-    background-color: var(--secundario);
+    background-color: var(--principal);
     width: 100%;
     text-transform: uppercase;
     margin-bottom: 2rem;
@@ -80,8 +79,15 @@ li{
 }
 
 .navegacion{
-    background-color: var(--alternativo);
+    background-color: var(--principal);
     text-transform: uppercase;
+}
+.navegacion a{
+    border: 1px solid var(--secundario);
+    padding: 1rem;
+    font-weight: bold;
+    border-radius: 1rem;
+    color: var(--secundario)
 }
 
 .navegacion li{
@@ -102,6 +108,10 @@ li{
     margin: 0 auto;
 }
 
+.footer-titulo{
+    color: var(--secundario);
+}
+
 .contacto{
     display: flex;
     justify-content: center;
@@ -115,4 +125,14 @@ li{
 
 .certificados{
     text-transform: uppercase;
+}
+
+.certificados a{
+    color: var(--secundario);
+}
+
+/*CV*/
+
+.icono{
+    filter: brightness(0) saturate(100%);
 }
