--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ li{
     text-transform: uppercase;
 }
 .navegacion a{
-    border: 1px solid var(--secundario);
+    border: 2px solid var(--secundario);
     padding: 1rem;
     font-weight: bold;
     border-radius: 1rem;
@@ -92,6 +92,12 @@ li{
 
 .navegacion li{
     padding: 1rem;
+    text-transform: uppercase;
+    transition: all 300ms;
+}
+
+.navegacion li:hover{
+    transform: scale(1.15);
 }
 
 @media (min-width: 768px) {
@@ -117,19 +123,59 @@ li{
     justify-content: center;
 }
 
-/*Formacion*/
-
-.formacion fieldset legend{
+.icono-contacto{
+    padding: 1rem;
     text-transform: uppercase;
+    transition: all 300ms;
 }
+
+.icono-contacto:hover{
+    transform: scale(1.6);
+}
+
+/*Formacion*/
 
 .certificados{
     text-transform: uppercase;
+    font-weight: bold;
 }
 
 .certificados a{
     color: var(--secundario);
 }
+
+/*Proyectos*/
+.proyecto{
+    border: 3px solid var(--secundario);
+    margin-bottom: 2rem;
+    transition: all 300ms;
+}
+
+.proyecto:hover{
+    transform: scale(1.1);
+}
+
+@media (min-width: 768px) {
+    .proyectos{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 3rem;
+    }
+
+    .proyecto{
+        margin: 0;
+    }
+}
+
+.imagen-proyecto{
+    width: 100%;
+    height: 85%;
+}
+.proyecto footer{
+    font-weight: bold;
+    color: var(--blanco);
+}
+
 
 /*CV*/
 
